Enable compact object headers for SBK runtimes